manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: sample-99995709
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: sample-99995709
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yml"]
          volumeMounts:
          - mountPath: /mnt/sample-99995709
            name: sample-99995709-volume
            readOnly: false
            subPath: sample-99995709
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: sample-99995709-volume
        persistentVolumeClaim:
          claimName: ce-aa-pvc
      - name: application-properties
        configMap:
          name: sample-99995709-configmap
          items:
            - key: application.yml
              path: application.yml
          defaultMode: 420
