manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-99995709-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: sample-99995709.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: sample-99995709
            port:
              number: 8080
        pathType: Prefix
